--- a/blastOff.html
+++ b/blastOff.html
@@ -25,13 +25,12 @@
     <h1> UAT Space Program</h1>
     <script>
         // the document.write prints text on the main body of the web page
-        document.write("This is of the document.write function");
+       // document.write("This is of the document.write function");
 
 
     </script>
     <p>
-        Test of the paragragh tags. A paragragh is more than one sentence. This is a paragragh.
-    </p>
+        
     <div id="blastOffText">  Blastoff Status will be presented here </div>
     <button onclick="betterCoutDown();">
         Start 
@@ -44,6 +43,11 @@
     </button>
     <br>
     <br>
+    <button class ="lgButton"onclick="playStation();">Play Station noise</button>
+    <br>
+    <br>
+    <button class ="lgButton"onclick="playTheBells();">Play Station music</button>
+
     <h3>Let's play Craps!!!!</h3>
     <div id = "Crapsresults"> Craps Results</div>
     <div id = "Die1results"> Die1 Results</div>
